{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 42,
  "lineage": "5de7b849-307b-4289-c38e-a8abd032ad4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647278903881:internet-gateway/igw-0864758447cc92f02",
            "id": "igw-0864758447cc92f02",
            "owner_id": "647278903881",
            "tags": {
              "Env": "Big Data",
              "Name": "Marcin",
              "Project": "PW"
            },
            "vpc_id": "vpc-0bfd49fd2b32bcfd6"
          },
          "dependencies": [
            "aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "emr_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0359ccd52480e008a",
            "owner_id": "647278903881",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0864758447cc92f02",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Big Data",
              "Name": "Marcin",
              "Project": "PW"
            },
            "vpc_id": "vpc-0bfd49fd2b32bcfd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647278903881:security-group/sg-0cdf00190f127155d",
            "description": "Security group for EMR master.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdf00190f127155d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 20888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4040,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4040
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "Marcin - EMR-master",
            "name_prefix": "",
            "owner_id": "647278903881",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "EMR_master"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfd49fd2b32bcfd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647278903881:security-group/sg-0075464d1fd4b1fb9",
            "description": "Security group for EMR slave.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0075464d1fd4b1fb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Marcin - EMR-slave",
            "name_prefix": "",
            "owner_id": "647278903881",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "EMR_slave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfd49fd2b32bcfd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "emr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647278903881:subnet/subnet-076cb04d3c9ab0f83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-076cb04d3c9ab0f83",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647278903881",
            "tags": {
              "Env": "Big Data",
              "Name": "Marcin",
              "Project": "PW"
            },
            "tags_all": {
              "Env": "Big Data",
              "Name": "Marcin",
              "Project": "PW"
            },
            "vpc_id": "vpc-0bfd49fd2b32bcfd6"
          },
          "dependencies": [
            "aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "emr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647278903881:vpc/vpc-0bfd49fd2b32bcfd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00964184801113cc6",
            "default_route_table_id": "rtb-033f8cbcb0a748fb1",
            "default_security_group_id": "sg-01ee4f938647f6a0f",
            "dhcp_options_id": "dopt-71e4990b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bfd49fd2b32bcfd6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-033f8cbcb0a748fb1",
            "owner_id": "647278903881",
            "tags": {
              "Env": "Big Data",
              "Name": "Marcin",
              "Project": "PW"
            },
            "tags_all": {
              "Env": "Big Data",
              "Name": "Marcin",
              "Project": "PW"
            }
          }
        }
      ]
    }
  ]
}